--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,7 +41,7 @@ repos:
     hooks:
       - id: alphasort
         name: alphasort
-        entry: alphasort
+        entry: make run
         language: system
 
 # sets up .pre-commit-ci.yaml to ensure pre-commit dependencies stay up to date
