--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -43,4 +43,4 @@ jobs:
       - name: Deploy application
         run: |
           poetry build
-          poetry publish --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }}
+          poetry publish --username __token__ --password ${{ secrets.PYPI_TOKEN }}
