--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "alphasort"
-version = "0.1.20"
+version = "0.1.21"
 description = "Sort lines within regions of a file."
 readme = "README.md"
 license = "LICENSE"
@@ -18,6 +18,7 @@ build-backend = "poetry.core.masonry.api"
 python = "^3.13"
 requests = "^2.32.3"
 tomli = "^2.2.1"
+argcomplete = "^3.5.2"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^3.3.2"
