--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -40,7 +40,21 @@ jobs:
       - name: Run pre-deploy
         run: make pre-deploy
 
+      - name: Check if version exists on PyPI
+        id: check_version
+        run: |
+          PACKAGE_NAME=$(poetry version | awk '{print $1}')
+          PACKAGE_VERSION=$(poetry version | awk '{print $2}')
+          if curl -s https://pypi.org/pypi/$PACKAGE_NAME/$PACKAGE_VERSION/json | grep -q 'Not Found'; then
+            echo "Version does not exist on PyPI. Proceeding with publish."
+            echo "::set-output name=exists::false"
+          else
+            echo "Version already exists on PyPI. Exiting."
+            echo "::set-output name=exists::true"
+          fi
+
       - name: Deploy application
+        if: steps.check_version.outputs.exists == 'false'
         run: |
           poetry build
           poetry publish --username __token__ --password ${{ secrets.PYPI_TOKEN }}
